--- a/MyLibrary/MyLibrary/MyLibrary.csproj
+++ b/MyLibrary/MyLibrary/MyLibrary.csproj
@@ -114,6 +114,9 @@
     <Compile Include="View\Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\UseInfoPage.xaml.cs">
+      <DependentUpon>UseInfoPage.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\AddBookPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -172,6 +175,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Registration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\UseInfoPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
